# fourthlab

./: CMakeLists.txt  README.md  main.cpp
classes/cpp/: UI.cpp
classes/headers/: ArraySequence.h  Cardinal.h  DynamicArray.h  ForecastCorrection.h  LazySequence.h  LinkedList.h  ListSequence.h  OnlineStatistics.h  Option.h  Ordinal.h  Sequence.h  Streams.h  UI.h
tests/: lab4_tests.cpp
